Upgrade to Java 24, Spring Boot 4.1.0-M2